err/arya.err
Listing '.'...
Listing './bin'...
Compiling './bin/apicxmljson.py'...
***   File "./bin/apicxmljson.py", line 120
    print converter().recurseXMLTree(tree.getroot())
                  ^
SyntaxError: invalid syntax

Compiling './bin/arya.py'...
***   File "./bin/arya.py", line 440
    print processinputstr(inputstr, args)
                        ^
SyntaxError: invalid syntax

Compiling './bin/getconfigfromapic.py'...
***   File "./bin/getconfigfromapic.py", line 72
    print arya().getpython(xmlstr=xmlstr, apicip=args.apic, apicuser=args.user, apicpassword=args.password)
             ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/arya'...
Compiling './lib/python3.5/site-packages/arya/apicxmljson.py'...
***   File "./lib/python3.5/site-packages/arya/apicxmljson.py", line 120
    print converter().recurseXMLTree(tree.getroot())
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/arya/arya.py'...
***   File "./lib/python3.5/site-packages/arya/arya.py", line 440
    print processinputstr(inputstr, args)
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/arya/getconfigfromapic.py'...
***   File "./lib/python3.5/site-packages/arya/getconfigfromapic.py", line 72
    print arya().getpython(xmlstr=xmlstr, apicip=args.apic, apicuser=args.user, apicpassword=args.password)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/arya-1.1.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
